# aegis-phase1

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  csf2.xlsx  pyproject.toml
.hooks/: ci-csf-frozen-list.sh  ci-da-audit.sh  ci-frameworks.sh  ci-preproc.sh  validate-contracts.sh
archive/csf_v11_v20_mapping/: README.md  csf_1_1_to_2_0_mapping.json
cases/case1-tinytask/: case.yaml
data/fixtures/: case_01_d01_p1c01_response.json  case_01_gdpr_p1b01_response.json
docs/: CONTRACTS.md  LANGFUSE_SETUP.md  LLM_ARCHITECTURE_DECISION.md  NIST_CSF_2.0_ONLY.md  SPEC-observability.md  prompts_v2_usage.md
docs/deucalion/: corr057_eval_workflow.md
examples/deucalion/: eval-corr057.sbatch  scout-corr057.sbatch
execution/: AUDIT_D-01.1_CSF_MAPPING.md  CONTRACT-022.md  CONTRACT-023.md  CONTRACT-024.md  CONTRACT-027.md  CONTRACT-028.md  CONTRACT-029.md  CONTRACT-030.md  CONTRACT-032.md  CONTRACT-034.md  CONTRACT-035.md  CONTRACT-036.md  CONTRACT-037.md  CONTRACT-038.md  CONTRACT-039.md  CONTRACT-040.md  CONTRACT-041.md  CONTRACT-042.md  CONTRACT-045.md  CONTRACT-046.md  CONTRACT-047.md  CONTRACT-048.md  CONTRACT-049.md  CONTRACT-050.md  CONTRACT-052.md  CONTRACT-053.md  CONTRACT-054-rework.md  CONTRACT-054.md  CONTRACT-055.md  CONTRACT-056.md  CONTRACT-057.md  CONTRACT-058.md  CORR-037-HANDOFF.md  CORR-039-HANDOFF.md  CORR-040-HANDOFF.md  CORR-041-HANDOFF.md
execution/reports/: corr045_report.md  corr046_report.md  corr047_report.md  corr048_report.md  corr049_report.md  corr050_report.md  corr052_report.md
logs/phase1/: corr042_errors.md  corr042_parity_diff.txt  corr042_parity_report.md  corr045_langfuse_trace_id.txt  corr046_langfuse_trace_id.txt  corr048_langfuse_trace_id.txt  corr049_langfuse_trace_id.txt  corr049_parity_report.md  corr050_langfuse_trace_id.txt  (+2 more)
scripts/: check_phase1_parity.py  corr056_compare_models.py  corr056_compare_models_v2.py  d10_2_experiment.py  domain_adapt_experiment.py  run_phase1.py  test-quick.sh  validate_d10_adaptation.py
tests/: conftest.py
(+347 files in other folders)
